# nixos-config

./: .gitignore  .sops.yaml  README.md  _config.yml  bootloader.nix  common-server.nix  common.nix  configuration-laptop.nix  configuration-tour.nix  configuration.nix  cri-sddm.nix  devenv.nix  flake.nix  gpu-passthrough.nix  home-manager  justfile  latest  result  sddm.nix  x11.nix
.github/workflows/: ci.yml  ci.yml.disabled  pages.py  pages.yml  screenshot-montage.sh  update.yml
custom-pkgs/systemswitch/: Cargo.toml  README.md  flake.nix
custom-pkgs/systemswitch/src/: ai-commit.sh  main.rs
home-manager/: basePackages.nix  home.nix  personalPackages.nix  services.nix
hooks/: qemu  vfio-startup.sh.temp  vfio-teardown.sh
hosts/: configuration-iso.nix  configuration-laptop.nix  configuration-tour.nix  hardware-configuration-laptop.nix  hardware-configuration-tour.nix
overlays/: default.nix
pkgs/: acttic-server.nix  attic-server.nix  bootloader.nix  cachix-subsituter.nix  cri-sddm.nix  flatpak.nix  gdm.nix  greetd.nix  grub.nix  home-assistant.nix  hyprland.nix  incus.nix  kmscon.nix  lightdm.nix  nh.nix  niri.nix  nvidia.nix  open-webui.nix  outline.nix  plymouth.nix  regreet.nix  sddm-epita-themes.nix  sddm.nix  sops.nix  sound.nix  stylix.nix  sway.nix  systemd-boot.nix  uutils.nix  wayland.nix  wol-agent.nix  x11.nix  xdg.nix  xfce.nix
secrets/: secrets.yaml
services/: autocpufreq.nix  sunshine.nix
tests/: clipboard-emojis.nix  default.nix  fastfetch.nix  firefox-and-terminals.nix  firefox-launching.nix  lib.nix  lock-screen.nix  login-screen.nix  login.nix  notifications.nix
tmp/: config.kdl
(+128 files in other folders)
